[package]
name = "mqtt_dewpoint"
version = "0.1.0"
authors = ["heydabop <heydabop@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple-error = "0.2"
toml = "0.5"