[package]
name = "mqtt_dewpoint"
version = "0.1.0"
authors = ["heydabop <heydabop@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.0"
mqtt = { git = "https://github.com/heydabop/mqtt.git" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
